--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: google_maps_place_picker_mb
 description: A Flutter plugin which provides 'Picking Place' using Google Maps
   widget. (MB version)
-version: 2.0.0-sv.18
-homepage: https://github.com/SmarterVision/google_maps_place_picker_mb
+version: 2.0.0-mb.18
+homepage: https://github.com/martin-braun/google_maps_place_picker_mb
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
